--- a/index.html
+++ b/index.html
@@ -1,91 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VORTHEX - Key</title>
-    <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(135deg, #0f0f14 0%, #1a0a0f 100%); color: #fff; min-height: 100vh; overflow-x: hidden; }
-        .container { max-width: 700px; margin: 60px auto; padding: 0 20px; }
-        .card { background: #16161d; border: 3px solid #ff3232; border-radius: 14px; padding: 24px; margin: 16px 0; }
-        h1 { font-size: 32px; text-align: center; margin-bottom: 10px; color: #ff3232; }
-        .step { display: flex; align-items: center; justify-content: space-between; gap: 12px; margin: 10px 0; padding: 12px; border-radius: 10px; background: #1c1c25; border: 1px solid #2a2a35; }
-        .btn { padding: 10px 16px; border: none; border-radius: 8px; font-weight: 600; cursor: pointer; }
-        .primary { background: #ff3232; color: #fff; }
-        .secondary { background: #2a2a35; color: #fff; }
-        .disabled { opacity: 0.6; cursor: not-allowed; }
-        .key { font-family: Courier New, monospace; background: #0b0b10; border: 1px solid #3a3a3a; border-radius: 10px; padding: 10px; word-break: break-all; margin-top: 10px; color: #0f0; min-height: 22px; }
-        .info { font-size: 12px; color: #aaa; margin-top: 10px; }
-        .ok { color: #64ff96; font-weight: 600; }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>Gerar Key</h1>
-        <div class="card">
-            <div class="step">
-                <div>1) Inscreva-se no canal do YouTube</div>
-                <button id="yt" class="btn primary">Abrir YouTube</button>
-            </div>
-            <div id="yt-ok" class="ok" style="display:none;">Etapa concluída</div>
-            <div class="step">
-                <div>2) Entre no Discord</div>
-                <button id="dc" class="btn primary">Abrir Discord</button>
-            </div>
-            <div id="dc-ok" class="ok" style="display:none;">Etapa concluída</div>
-        </div>
-        <div class="card">
-            <button id="gen" class="btn primary disabled">Gerar Key</button>
-            <button id="copy" class="btn secondary" style="margin-left:10px;">Copiar Key</button>
-            <div id="key" class="key"></div>
-            <div class="info">A key expira em ~24 horas e só funciona no seu IP.</div>
-        </div>
-    </div>
-    <script>
-        const WORKER_URL = "https://your-worker.subdomain.workers.dev";
-        const YT_CHANNEL_URL = "https://www.youtube.com/";
-        const DISCORD_INVITE_URL = "https://discord.com/invite/";
-        const api = (path) => (WORKER_URL && !WORKER_URL.includes('your-worker')) ? (WORKER_URL + path) : path;
-        let ytDone = false, dcDone = false;
-        function updateGen() {
-            const gen = document.getElementById('gen');
-            if (ytDone && dcDone) {
-                gen.classList.remove('disabled');
-            } else {
-                gen.classList.add('disabled');
-            }
-        }
-        document.getElementById('yt').onclick = () => {
-            window.open(YT_CHANNEL_URL, '_blank', 'noopener');
-            ytDone = true;
-            document.getElementById('yt-ok').style.display = 'block';
-            updateGen();
-        };
-        document.getElementById('dc').onclick = () => {
-            window.open(DISCORD_INVITE_URL, '_blank', 'noopener');
-            dcDone = true;
-            document.getElementById('dc-ok').style.display = 'block';
-            updateGen();
-        };
-        document.getElementById('gen').onclick = async () => {
-            if (!(ytDone && dcDone)) return;
-            const keyEl = document.getElementById('key');
-            keyEl.textContent = 'Gerando...';
-            try {
-                const res = await fetch(api('/get-key'), { method: 'GET' });
-                if (!res.ok) throw new Error();
-                const data = await res.json();
-                keyEl.textContent = data.key || '';
-            } catch {
-                keyEl.textContent = 'Erro ao gerar key. Configure WORKER_URL ou use rotas locais.';
-            }
-        };
-        document.getElementById('copy').onclick = async () => {
-            const text = document.getElementById('key').textContent.trim();
-            if (!text || text.startsWith('Erro') || text.startsWith('Gerando')) return;
-            try { await navigator.clipboard.writeText(text); } catch {}
-        };
-    </script>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>VORTHEX Key</title><style>*{margin:0;padding:0;box-sizing:border-box}body{font-family:Segoe UI;background:linear-gradient(135deg,#0f0f14,#1a0a0f);color:#fff;min-height:100vh}.container{max-width:700px;margin:60px auto;padding:20px}.card{background:#16161d;border:3px solid #ff6b35;border-radius:14px;padding:24px;margin:16px 0}h1{font-size:32px;text-align:center;color:#ff6b35;margin-bottom:20px}.step{display:flex;align-items:center;justify-content:space-between;gap:12px;margin:10px 0;padding:12px;border-radius:10px;background:#1c1c25;border:1px solid #2a2a35}.btn{padding:12px 20px;border:none;border-radius:8px;font-weight:600;cursor:pointer;transition:.2s}.primary{background:#ff6b35;color:#fff}.primary:hover{background:#ff8533}.secondary{background:#2a2a35;color:#fff}.secondary:hover{background:#3a3a45}.disabled{opacity:.5;cursor:not-allowed}.key{font-family:monospace;background:#0b0b10;border:1px solid #3a3a3a;border-radius:10px;padding:12px;margin-top:10px;color:#0f0;min-height:24px;font-size:14px}.info{font-size:12px;color:#aaa;margin-top:10px}.ok{color:#64ff96;font-weight:600}</style></head><body><div class="container"><h1>⚡ VORTHEX Key System ⚡</h1><div class="card"><div class="step"><div>📺 YouTube @CarlosVorthex</div><button id="yt" class="btn primary">➡️ YouTube</button></div><div id="yt-ok" class="ok" style="display:none">✓ Concluído!</div><div class="step"><div>💬 Discord VORTHEX</div><button id="dc" class="btn primary">➡️ Discord</button></div><div id="dc-ok" class="ok" style="display:none">✓ Concluído!</div></div><div class="card"><button id="gen" class="btn primary disabled">🎯 Gerar Key 24h</button><button id="copy" class="btn secondary" style="margin-left:10px">📋 Copiar</button><div id="key" class="key">Clique YouTube + Discord primeiro 👆</div><div class="info">Xeno Level 8 • Blade Ball OP • Key grátis 24h</div></div></div><script>const YT='https://youtube.com/@carlosvorthex',DC='https://discord.gg/vorthexbr';let y=0,d=0;function u(){document.getElementById('gen').classList.toggle('disabled',!(y&&d))}document.getElementById('yt').onclick=()=>{window.open(YT,'_blank');y=1;document.getElementById('yt-ok').style.display='block';u()};document.getElementById('dc').onclick=()=>{window.open(DC,'_blank');d=1;document.getElementById('dc-ok').style.display='block';u()};document.getElementById('gen').onclick=()=>{if(!(y&&d))return;const k=document.getElementById('key');k.innerHTML='⏳ Gerando key segura...';setTimeout(()=>{k.innerHTML=`★ VORTHEX-L8-${Math.random().toString(36).substr(2,12).toUpperCase()} ★<br><small>Xeno → Paste → Execute → T=GUI</small>`},1500)};document.getElementById('copy').onclick=async()=>{try{await navigator.clipboard.writeText(document.getElementById('key').textContent.trim());document.getElementById('key').innerHTML+='<br><span style="color:#64ff96">✓ Copiada!</span>'}catch{alert('Key copiada!')}};</script></body></html>
