--- a/index.html
+++ b/index.html
@@ -179,20 +179,30 @@
             color: #888;
         }
 
+        .step-content {
+            display: flex;
+            align-items: center;
+        }
+
         .step-icon {
-            width: 40px;
-            height: 40px;
+            width: 50px;
+            height: 50px;
             margin-right: 15px;
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 20px;
+            font-size: 24px;
             font-weight: bold;
+            flex-shrink: 0;
         }
 
-        #step1 .step-icon { background: linear-gradient(135deg, #ff0000, #ff3232); }
-        #step2 .step-icon { background: linear-gradient(135deg, #7289da, #99aab5); }
+        #step1 .step-icon { 
+            background: linear-gradient(135deg, #ff0000, #ff3232); 
+        }
+        #step2 .step-icon { 
+            background: linear-gradient(135deg, #7289da, #99aab5); 
+        }
     </style>
 </head>
 <body>
@@ -207,8 +217,9 @@
         <div class="card">
             <h2 style="color: #ff3232; margin-bottom: 20px; text-align: center;">🔐 VERIFICAÇÃO</h2>
             
+            <!-- ✅ MUDANÇA 1: YouTube @Vorthex-k5n + ÍCONE -->
             <div class="step" id="step1">
-                <div style="display: flex; align-items: center;">
+                <div class="step-content">
                     <div class="step-icon">📺</div>
                     <span>YouTube @Vorthex-k5n</span>
                 </div>
@@ -216,8 +227,9 @@
             </div>
             <div class="status" id="ytStatus" style="display: none;">✓ YouTube Concluído</div>
 
+            <!-- ✅ MUDANÇA 2: Discord + ÍCONE -->
             <div class="step" id="step2">
-                <div style="display: flex; align-items: center;">
+                <div class="step-content">
                     <div class="step-icon">💬</div>
                     <span>Discord VORTHEX</span>
                 </div>
@@ -240,6 +252,7 @@
     </div>
 
     <script>
+        // ✅ Estrelas
         const starsContainer = document.getElementById('stars');
         for (let i = 0; i < 100; i++) {
             const star = document.createElement('div');
@@ -252,6 +265,7 @@
 
         let ytDone = false, dcDone = false;
 
+        // ✅ MUDANÇA 3: Link correto do teu canal
         document.getElementById('btnYT').onclick = () => {
             window.open('https://www.youtube.com/@Vorthex-k5n', '_blank');
             ytDone = true;
